syntax = "proto3";
package secretsmanagerplugin;

option go_package = "./;secretsmanagerplugin";

message SecretsGetRequest {
    Key keyDescriptor = 1;
}

message SecretsSetRequest {
    Key keyDescriptor = 1;
    string value = 2;
}

message SecretsDelRequest {
    Key keyDescriptor = 1;
}

message SecretsKeysRequest {
    Key keyDescriptor = 1;
    bool allOrganizations = 2;
}

message SecretsRenameRequest {
    Key keyDescriptor = 1;
    string newNamespace = 2;
}

message Key {
    int64 orgId = 1;
    string namespace = 2;
    string type = 3;
}

message SecretsErrorResponse {
    string error = 1;
}

message SecretsGetResponse {
    string error = 1;
    string decryptedValue = 2;
    bool exists = 3;  
}

message SecretsKeysResponse {
    string error = 1;
    repeated Key keys = 2;
}

service RemoteSecretsManager {
    rpc Get(SecretsGetRequest) returns (SecretsGetResponse);
    rpc Set(SecretsSetRequest) returns (SecretsErrorResponse);
    rpc Del(SecretsDelRequest) returns (SecretsErrorResponse);
    rpc Keys(SecretsKeysRequest) returns (SecretsKeysResponse);
    rpc Rename(SecretsRenameRequest) returns (SecretsErrorResponse);
}